--- a/frontend/src/app/features/admin/pages/Usuarios/admin-users.component.html
+++ b/frontend/src/app/features/admin/pages/Usuarios/admin-users.component.html
@@ -1,4 +1,4 @@
-<h1 class="page-title">👥 Usuarios (Clientes)</h1>
+<h1 class="page-title">👥 Usuarios </h1>
 
 <!-- FILTROS -->
 <div style="display:flex; gap:12px; margin-bottom:16px">
