diseño de pefil

--- a/frontend/src/app/features/profile/pages/profile-favorite.component.html
+++ b/frontend/src/app/features/profile/pages/profile-favorite.component.html
@@ -1,6 +1,6 @@
 <section class="favorites-container">
 
-  <h2>❤️ Mis restaurantes favoritos</h2>
+  <h2>❤️ Mis restaurantes favoritoss/h2>
 
   <div *ngIf="loading" class="loading">
     Cargando favoritos...
